--- a/src/app/select/select.component.html
+++ b/src/app/select/select.component.html
@@ -5,7 +5,7 @@
   </option>
 </select>
 <app-select
-  *ngIf="children.length > 0"
+  *ngIf="children.length > 0 && selected !== null"
   [level]="level + 1"
   [parent]="selected"
 ></app-select>
