Completed Feature: Working Fine

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
       <div class="container-outer">
         <div class="container-form">
           <div class="container-inputs">
+            <button (click)="clearMenu()" >Clear Menu</button>
             <input
               type="text"
               name="input"
